<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ConfirmAddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background_gradient"
        android:padding="@dimen/root_page_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_cep_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="30dp"
                    android:hint="@string/cep"
                    android:inputType="numberDecimal"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_cep"
                        style="@style/TextInputStyle"
                        android:inputType="numberDecimal"
                        tools:text="62738000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_street_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="30dp"
                    android:hint="@string/street"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_street"
                        style="@style/TextInputStyle"
                        tools:text="Rua Coronel Mozart Gondim" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="30dp"
                    android:hint="@string/number"
                    android:inputType="numberDecimal"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_number"
                        style="@style/TextInputStyle"
                        android:inputType="numberDecimal"
                        tools:text="1320" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="30dp"
                    android:hint="@string/complement"
                    android:inputType="numberDecimal"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_complement"
                        style="@style/TextInputStyle"
                        android:inputType="text"
                        tools:text="Bloco A" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_district_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="30dp"
                    android:hint="@string/district"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_district"
                        style="@style/TextInputStyle"
                        tools:text="São Gerardo" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <com.vald3nir.commom.presentation.components.BaseButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>